# ros_webcam_lidar

./: CMakeLists.txt  README.md  package.xml
cfg/: color_filter.cfg  webcam_lidar.cfg
firmware/: ps_eye_sync.cpp
launch/: lidar.launch  simulation.launch
params/: color_filter.yaml  lidar_intrinsic.yaml  ps3_eye.yaml
rviz/: webcam_lidar.rviz
src/: soft_color_filter.cpp  triangulation_node.cpp
urdf/: webcam_lidar.xacro
world/: practice.world
